<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group>
        <item
            android:id="@+id/payment"
            android:title="@string/payment" />
        <item
            android:id="@+id/my_address"
            android:title="@string/my_address"/>
        <item
            android:id="@+id/favorites"
            android:title="@string/favorites" />
        <item
            android:id="@+id/news"
            android:title="@string/news" />
        <item
            android:id="@+id/coupons"
            android:title="@string/coupons" />
        <item
            android:id="@+id/about_us"
            android:title="@string/about_us" />
        <item
            android:id="@+id/invite_friends"
            android:title="@string/invite" />
        <item
            android:id="@+id/settings"
            android:title="@string/settings" />
    </group>

    <item android:title=""/>
    <item android:title=""/>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:checkable="true"
                android:enabled="false"
                android:orderInCategory="400"
                android:icon="@drawable/msg"
                android:title="@string/contact_us" />

        </menu>
    </item>

</menu>

